--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,8 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/data/external
+/data/internal
 
 # Mac OS-specific storage files
 .DS_Store
