--- a/etc/requirements.txt
+++ b/etc/requirements.txt
@@ -8,3 +8,23 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+Cython==0.29.33
+dataset==1.6.0
+datasets==2.9.0
+evaluate==0.4.0
+huggingface-hub==0.12.0
+ipykernel==6.15.3
+ipython==8.5.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.2
+jupyter==1.0.0
+matplotlib==3.6.0
+numpy==1.24.2
+pandas==1.5.3
+Pillow==9.2.0
+seaborn==0.12.2
+seqeval==1.2.2
+tokenizers==0.13.2
+torch==1.12.1
+transformers==4.26.1
+
