--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ target/
 .mypy_cache/
 
 # Data
-/data/processed/DocLayNet/multimodal/train.json
+/data/processed/DocLayNet/
 /data/raw/DocLayNet/JSON
 /data/raw/DocLayNet/PNG
 /data/raw/DocLayNet/COCO
